force-app/main/default/objects/Checklist__c/fields/All_household_income_accounted__c.field-meta.xml
<CustomField>
    <fullName>All_household_income_accounted__c</fullName>
    <description>All household income accounted for (anyone over the age of 18, must provide
paystubs and tax returns</description>
    <label>All household income accounted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>