force-app/main/default/objects/Checklist__c/fields/Appraisal_Contact_Info_Provided__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Contact_Info_Provided__c</fullName>
    <description>Appraisal contact information, provided</description>
    <label>Appraisal Contact Info Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>