force-app/main/default/objects/Checklist__c/fields/AUS_Arive_Matches__c.field-meta.xml
<CustomField>
    <fullName>AUS_Arive_Matches__c</fullName>
    <description>Automated Underwriting System (AUS) findings (Approve Eligible) – Arive/Findings
to match (if AUS has been run in investor LOS, AUS to be uploaded into Arive)</description>
    <label>AUS - Arive Matches</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>