force-app/main/default/objects/Checklist__c/fields/Bankruptcy_or_foreclosure_documentatio__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_or_foreclosure_documentatio__c</fullName>
    <description>Bankruptcy or foreclosure documentation (if applicable)</description>
    <label>Bankruptcy or foreclosure documentatio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>