force-app/main/default/objects/Checklist__c/fields/Certificate_of_Eligibility_COE__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Eligibility_COE__c</fullName>
    <description>Certificate of Eligibility (COE) or</description>
    <label>Certificate of Eligibility (COE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>