force-app/main/default/objects/Checklist__c/fields/DD214_or_Statement_of_Service__c.field-meta.xml
<CustomField>
    <fullName>DD214_or_Statement_of_Service__c</fullName>
    <description>DD214 or Statement of Service (for active duty)</description>
    <label>DD214 or Statement of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>