force-app/main/default/objects/Checklist__c/fields/Disclosures_and_Opening_Provided__c.field-meta.xml
<CustomField>
    <fullName>Disclosures_and_Opening_Provided__c</fullName>
    <description>Submission Form has information for disclosures and for opening</description>
    <label>Disclosures and Opening Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>