force-app/main/default/objects/Checklist__c/fields/Dissolution_of_Marriage__c.field-meta.xml
<CustomField>
    <fullName>Dissolution_of_Marriage__c</fullName>
    <description>Dissolution of Marriage with Martial Agreement (if applicable)</description>
    <label>Dissolution of Marriage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>