force-app/main/default/objects/Checklist__c/fields/Documentation_for_child_support_cond__c.field-meta.xml
<CustomField>
    <fullName>Documentation_for_child_support_cond__c</fullName>
    <description>Documentation for child support or alimony obligations (if applicable) – If not
court ordered 12 months of receipt is needed along with letter signed by both
parties</description>
    <label>Documentation for child support (cond)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>