force-app/main/default/objects/Checklist__c/fields/Documentation_for_child_support_nocond__c.field-meta.xml
<CustomField>
    <fullName>Documentation_for_child_support_nocond__c</fullName>
    <description>Documentation for child support or alimony obligations (if applicable)</description>
    <label>Documentation for child support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>