force-app/main/default/objects/Checklist__c/fields/Documentation_of_other_income__c.field-meta.xml
<CustomField>
    <fullName>Documentation_of_other_income__c</fullName>
    <description>Documentation of other income (e.g., Social Security, disability, alimony, child
support – if used for qualifying)</description>
    <label>Documentation of other income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>