force-app/main/default/objects/Checklist__c/fields/Documentation_of_retirement_or_inv_accs__c.field-meta.xml
<CustomField>
    <fullName>Documentation_of_retirement_or_inv_accs__c</fullName>
    <description>Documentation of retirement or investment accounts (if applicable)</description>
    <label>Documentation of retirement or inv. accs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>