force-app/main/default/objects/Checklist__c/fields/Documented_Gift__c.field-meta.xml
<CustomField>
    <fullName>Documented_Gift__c</fullName>
    <description>If receiving gift, application documented with Gift, Source of Funds labeled Gift
(FHA), and Loan Officer Submission Form explaining who will be giving gift</description>
    <label>Documented Gift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>