force-app/main/default/objects/Checklist__c/fields/Employment_section_completed__c.field-meta.xml
<CustomField>
    <fullName>Employment_section_completed__c</fullName>
    <description>Employment section completed with a 2 year work history</description>
    <label>Employment section completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>