force-app/main/default/objects/Checklist__c/fields/Executed_purchase_agreement__c.field-meta.xml
<CustomField>
    <fullName>Executed_purchase_agreement__c</fullName>
    <description>Fully executed purchase agreement (if purchase transaction)</description>
    <label>Executed purchase agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>