force-app/main/default/objects/Checklist__c/fields/Explanation_for_large_deposits__c.field-meta.xml
<CustomField>
    <fullName>Explanation_for_large_deposits__c</fullName>
    <description>Explanation for large deposits, on Submission Form</description>
    <label>Explanation for large deposits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>