force-app/main/default/objects/Checklist__c/fields/Explanation_of_Major_Credit_Items__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Major_Credit_Items__c</fullName>
    <description>Explanation on Loan Submission Form for any major credit items (ex: inquiries,
derogatory items, or disputes)</description>
    <label>Explanation of Major Credit Items</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>