force-app/main/default/objects/Checklist__c/fields/FHA_History_Correct__c.field-meta.xml
<CustomField>
    <fullName>FHA_History_Correct__c</fullName>
    <description>FHA positive rental history selected correctly</description>
    <label>FHA History Correct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>