force-app/main/default/objects/Checklist__c/fields/Full_credit_report__c.field-meta.xml
<CustomField>
    <fullName>Full_credit_report__c</fullName>
    <description>Full credit report (name matches ID and reference # matches AUS)</description>
    <label>Full credit report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>