force-app/main/default/objects/Checklist__c/fields/HOA_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>HOA_Contact_Info__c</fullName>
    <description>HOA contact info (if applicable)</description>
    <label>HOA Contact Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>