force-app/main/default/objects/Checklist__c/fields/Housing_history_completed__c.field-meta.xml
<CustomField>
    <fullName>Housing_history_completed__c</fullName>
    <description>Housing history completed with a 2 year histor</description>
    <label>Housing history completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>