force-app/main/default/objects/Checklist__c/fields/Insurance_Quote_Provided__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Quote_Provided__c</fullName>
    <description>Homeowners insurance quote, provided</description>
    <label>Insurance Quote Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>