force-app/main/default/objects/Checklist__c/fields/Last_2_years_W_2s_or_1099s__c.field-meta.xml
<CustomField>
    <fullName>Last_2_years_W_2s_or_1099s__c</fullName>
    <description>Last 2 years&apos; W-2s or 1099s (if applicable)</description>
    <label>Last 2 years&apos; W-2s or 1099s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>