force-app/main/default/objects/Checklist__c/fields/Lease_agreements_for_rental_income__c.field-meta.xml
<CustomField>
    <fullName>Lease_agreements_for_rental_income__c</fullName>
    <description>Lease agreements for rental income (if applicable)</description>
    <label>Lease agreements for rental income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>