force-app/main/default/objects/Checklist__c/fields/Mortgage_Statements_for_properties_owned__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Statements_for_properties_owned__c</fullName>
    <description>Current mortgage statements for any other properties owned</description>
    <label>Mortgage Statements for properties owned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>