force-app/main/default/objects/Checklist__c/fields/Most_recent_30_days_of_pay_stubs__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_30_days_of_pay_stubs__c</fullName>
    <description>Most recent 30 days of pay stubs</description>
    <label>Most recent 30 days of pay stubs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>