force-app/main/default/objects/Checklist__c/fields/Photo_ID__c.field-meta.xml
<CustomField>
    <fullName>Photo_ID__c</fullName>
    <description>Government-issued photo ID</description>
    <label>Photo ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>