force-app/main/default/objects/Checklist__c/fields/Quality_Notes_in_Form_Provided__c.field-meta.xml
<CustomField>
    <fullName>Quality_Notes_in_Form_Provided__c</fullName>
    <description>Notes in Loan Submission form thoroughly explain the file- Including Program
name and color if not an agency loan</description>
    <label>Quality Notes in Form Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>