force-app/main/default/objects/Checklist__c/fields/Recent_bank_statement__c.field-meta.xml
<CustomField>
    <fullName>Recent_bank_statement__c</fullName>
    <description>Most recent 1-2 months of bank statements (all pages, including non-transactional
pages)</description>
    <label>Recent bank statement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>