force-app/main/default/objects/Checklist__c/fields/Rental_History_Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Rental_History_Is_Required__c</fullName>
    <description>If rental history is required, Name and #/email of landlord</description>
    <label>Rental History Is Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>