force-app/main/default/objects/Checklist__c/fields/REO_Docs_for_any_properties_owned__c.field-meta.xml
<CustomField>
    <fullName>REO_Docs_for_any_properties_owned__c</fullName>
    <label>REO Docs for any properties owned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>