force-app/main/default/objects/Checklist__c/fields/Signed_FHA_Amendatory_Clause__c.field-meta.xml
<CustomField>
    <fullName>Signed_FHA_Amendatory_Clause__c</fullName>
    <description>Signed FHA Amendatory Clause</description>
    <label>Signed FHA Amendatory Clause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>