force-app/main/default/objects/Checklist__c/fields/Spouse_Name_Provided__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name_Provided__c</fullName>
    <label>Spouse Name Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>