force-app/main/default/objects/Checklist__c/fields/SS_Card_for_all_borrowers__c.field-meta.xml
<CustomField>
    <fullName>SS_Card_for_all_borrowers__c</fullName>
    <description>SS Card for all borrowers</description>
    <label>SS Card for all borrowers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>