force-app/main/default/objects/Checklist__c/fields/Tax_Cert__c.field-meta.xml
<CustomField>
    <fullName>Tax_Cert__c</fullName>
    <description>Tax Cert (Amount matches application)</description>
    <label>Tax Cert</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>