force-app/main/default/objects/Checklist__c/fields/Tax_return_for_self_employed_borrowers__c.field-meta.xml
<CustomField>
    <fullName>Tax_return_for_self_employed_borrowers__c</fullName>
    <description>Tax returns (last 1 or 2 years) for self-employed borrowers or income derived from
investments</description>
    <label>Tax return for self-employed borrowers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>