force-app/main/default/objects/Checklist__c/fields/VA_specific_disclosures__c.field-meta.xml
<CustomField>
    <fullName>VA_specific_disclosures__c</fullName>
    <description>VA-specific disclosures (e.g., VA Nearest Living Relative form)</description>
    <label>VA-specific disclosures</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>