force-app/main/default/objects/Checklist__c/fields/X1120_Corporate_Returns__c.field-meta.xml
<CustomField>
    <fullName>X1120_Corporate_Returns__c</fullName>
    <description>If borrower has 1120’s, need full corporate returns, along with K1’s (2 years unless
Conventional and borrower has had the same business for 5 years, then 1 year)</description>
    <label>1120 Corporate Returns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>