force-app/main/default/objects/Checklist__c/fields/X3_years_of_tax_returns_or_transcripts__c.field-meta.xml
<CustomField>
    <fullName>X3_years_of_tax_returns_or_transcripts__c</fullName>
    <description>3 years of tax returns or transcripts</description>
    <label>3 years of tax returns or transcripts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>