force-app/main/default/objects/Checklist__c/fields/Year_end_paystubs_for_the_past_two_years__c.field-meta.xml
<CustomField>
    <fullName>Year_end_paystubs_for_the_past_two_years__c</fullName>
    <description>Year end paystubs for the past two years if variable income (Hourly, Bonus, OT,
Commission, Shift Differential)</description>
    <label>Year end paystubs for the past two years</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>